# ai-harness

./: .env.example  .envrc  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  PROGRESS.md  README.md  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml  spec-full.md  spec.md
ai-harness/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: architect.md  code-reviewer.md  eval-guide.md  skills.md  sre.md  tests.md
host_servers/architect_server/: pyproject.toml
host_servers/architect_server/architect_server/: adr.py  architecture_review.py  cache.py  diagram.py  embeddings.py  llm.py  resolver.py  search.py  server.py
host_servers/architect_server/tests/: test_adr.py  test_architecture_review.py  test_cache.py  test_diagram.py  test_embeddings.py  test_llm.py  test_resolver.py  test_search.py  test_semantic.py
mcpjungle/: config.yml
policies/: harness.rego
prompts/: adversarial_architecture_critic.md  adversarial_code_critic.md  architect.md  architecture_bootstrap.md  architecture_review.md  classify.md  code_reviewer.md  diagram_gen.md  react_code_reviewer.md  react_sre.md  sre.md  synthesise.md
scripts/: demo_injection.py  (+7 more)
services/governance/: Dockerfile  pyproject.toml  requirements.txt  server.py
services/governance/core/: auth.py  config.py  dolt.py  metrics.py  opa.py
services/governance/routers/: agents.py  learning.py  policy.py  skills.py  tasks.py
services/review_server/: Dockerfile  architecture_review.py  code_analysis.py  metrics.py  pyproject.toml  requirements.txt  server.py
services/review_server/architecture_gate/: base.py  models.py  registry.py  runner.py
services/review_server/architecture_gate/checkers/: import_linter.py  xenon_checker.py
stub_servers/: Dockerfile.sre  Dockerfile.stub  architect_server.py  diff_proxy_server.py  git_diff_server.py  linter_server.py  pyproject.toml  requirements.txt  semgrep-rules.yml  sre_server.py
(+138 files in other folders)
