[project]
name = "stub-servers"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "uvicorn>=0.27",
    "harness-memory",
]

[tool.uv.sources]
harness-memory = { workspace = true }

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
