[project]
name = "architect-server"
version = "0.1.0"
description = "Host-side architect MCP server (codebase_search, adr_read, adr_write, diagram_gen)"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "watchfiles>=0.21",
    "google-genai",
    "openai>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["architect_server*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
