[project]
name = "governance"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pyjwt>=2.8",
    "httpx>=0.27",
    "pymysql>=1.1",
    "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
