[project]
name = "review-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "uvicorn>=0.27",
    "ollama>=0.3",
    "httpx>=0.27",
    "jsonschema>=4.22",
    "import-linter>=2.0",
    "xenon>=0.9",
    "radon>=6.0",
    "prometheus-client>=0.20",
    "asyncpg>=0.29",
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
